@@ -26,15 +26,11 @@
 # define GC_BUILD
 #endif
 
-#if defined(__linux__) || defined(__GLIBC__) || defined(__GNU__)
+#if (defined(__linux__) || defined(__GLIBC__) || defined(__GNU__)) \
+    && !defined(_GNU_SOURCE)
   /* Can't test LINUX, since this must be defined before other includes. */
-# if !defined(__native_client__)
-#   include <features.h>
-# endif
-# ifndef _GNU_SOURCE
-#   define _GNU_SOURCE 1
-# endif
-#endif /* __linux__ */
+# define _GNU_SOURCE 1
+#endif
 
 #if (defined(DGUX) && defined(GC_THREADS) || defined(DGUX386_THREADS) \
      || defined(GC_DGUX386_THREADS)) && !defined(_USING_POSIX4A_DRAFT10)
